samples/_failures_safe/1761337281_29d46d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4c3e9dc9.c: In function ‘main’:
./samples/SAFE/__tmp_4c3e9dc9.c:151:5: error: expected expression at end of input
  151 |     while (1)
      |     ^~~~~
./samples/SAFE/__tmp_4c3e9dc9.c:151:5: error: expected declaration or statement at end of input
